--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^8.0.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.4.1"
   },
   "husky": {
     "hooks": {
