--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@supabase/supabase-js": "^2.45.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lint-staged": "^15.2.10",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
