revamp user management table

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "jotai": "^2.10.1",
     "lint-staged": "^15.2.10",
