--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^22.9.0",
     "@types/phoenix": "^1.6.5",
     "@types/react": "18.3.12",
+    "cypress": "^13.16.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
@@ -62,7 +63,8 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "wait-on": "^7.0.0"
   },
   "husky": {
     "hooks": {
