--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/phoenix": "^1.6.5",
     "@types/react": "18.3.12",
     "cypress": "^13.16.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
