--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.4.0",
     "jotai": "^2.10.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
