--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.9.0",
     "@types/phoenix": "^1.6.5",
     "@types/react": "18.3.12",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.16.0",
     "cypress-file-upload": "^5.0.8",
     "eslint": "^8",
