--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -59,3 +59,18 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
+
+  deployment:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
