--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Build the app
         run: npm run build
         env:
-          NEXT_PUBLIC_SUPABASE_URL: https://rcfzezkhwvgtwpqcyhac.supabase.co
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjZnplemtod3ZndHdwcWN5aGFjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjg0NDQ3OTAsImV4cCI6MjA0NDAyMDc5MH0.6twoLk7Sct_QbG7uLhnwM_jhFAk907YCpEAlK5R6f04
-          NEXT_SERVICE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjZnplemtod3ZndHdwcWN5aGFjIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyODQ0NDc5MCwiZXhwIjoyMDQ0MDIwNzkwfQ.QjUng71fLp0a27aNvz-vP4yqXXmtTQfA61OMg4kU5iU
+          NEXT_PUBLIC_SUPABASE_URL: https://vvhdkxostggyorvfousm.supabase.co
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2aGRreG9zdGdneW9ydmZvdXNtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4MjkxMDUsImV4cCI6MjA3MjQwNTEwNX0.Aiwv3dSxnJ0ILhfWxvtP2StGnfE7Qx0C2jnrDnfUiIE
+          NEXT_SERVICE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2aGRreG9zdGdneW9ydmZvdXNtIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1NjgyOTEwNSwiZXhwIjoyMDcyNDA1MTA1fQ.kThEhIYyTwUBltHTR7yKOg9f9t7FEb2tiO8wIm2LA74
 
       - name: Deploy to Vercel
         env:
-          VERCEL_TOKEN: sCx5hgQeCPEzdDgos7ekZJ9Z
-          NEXT_PUBLIC_SUPABASE_URL: https://rcfzezkhwvgtwpqcyhac.supabase.co
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjZnplemtod3ZndHdwcWN5aGFjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjg0NDQ3OTAsImV4cCI6MjA0NDAyMDc5MH0.6twoLk7Sct_QbG7uLhnwM_jhFAk907YCpEAlK5R6f04
-          NEXT_SERVICE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjZnplemtod3ZndHdwcWN5aGFjIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTcyODQ0NDc5MCwiZXhwIjoyMDQ0MDIwNzkwfQ.QjUng71fLp0a27aNvz-vP4yqXXmtTQfA61OMg4kU5iU
+          VERCEL_TOKEN: zodNS4ObLAWzdw1PrFwYjQp8
+          NEXT_PUBLIC_SUPABASE_URL: https://vvhdkxostggyorvfousm.supabase.co
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2aGRreG9zdGdneW9ydmZvdXNtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4MjkxMDUsImV4cCI6MjA3MjQwNTEwNX0.Aiwv3dSxnJ0ILhfWxvtP2StGnfE7Qx0C2jnrDnfUiIE
+          NEXT_SERVICE_SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2aGRreG9zdGdneW9ydmZvdXNtIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1NjgyOTEwNSwiZXhwIjoyMDcyNDA1MTA1fQ.kThEhIYyTwUBltHTR7yKOg9f9t7FEb2tiO8wIm2LA74
         run: vercel --prod --yes
