--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Build the app
         run: npm run build
         env:
-          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-          NEXT_SERVICE_SUPABASE_ANON_KEY: ${{ secrets.NEXT_SERVICE_SUPABASE_ANON_KEY }}
+          NEXT_PUBLIC_SUPABASE_URL: ${{ env.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ env.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          NEXT_SERVICE_SUPABASE_ANON_KEY: ${{ env.NEXT_SERVICE_SUPABASE_ANON_KEY }}
 
       - name: Deploy to Vercel
         env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-          NEXT_SERVICE_SUPABASE_ANON_KEY: ${{ secrets.NEXT_SERVICE_SUPABASE_ANON_KEY }}
+          VERCEL_TOKEN: ${{ env.VERCEL_TOKEN }}
+          NEXT_PUBLIC_SUPABASE_URL: ${{ env.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ env.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          NEXT_SERVICE_SUPABASE_ANON_KEY: ${{ env.NEXT_SERVICE_SUPABASE_ANON_KEY }}
         run: vercel --prod --yes
