--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      - name: Dump envs
+        run: env | grep SUPABASE || true
       - name: Debug env
         run: |
           echo "URL=$NEXT_PUBLIC_SUPABASE_URL"
