--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,6 +6,11 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
     environment: production
+    env:
+      NEXT_PUBLIC_SUPABASE_URL: ${{ vars.NEXT_PUBLIC_SUPABASE_URL }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ vars.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+      NEXT_SERVICE_SUPABASE_ANON_KEY: ${{ vars.NEXT_SERVICE_SUPABASE_ANON_KEY }}
+
     steps:
       - name: Dump envs
         run: env | grep SUPABASE || true
