--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "embla-carousel-react": "^8.5.1",
     "jotai": "^2.10.1",
     "lucide-react": "^0.451.0",
-    "next": "14.2.15",
+    "next": "^14.2.33",
     "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
